Temporary commit to backup with new tests and entities

--- a/BioDiagnostics.RazorComponents/RequestToBeReviewedForm.razor
+++ b/BioDiagnostics.RazorComponents/RequestToBeReviewedForm.razor
@@ -31,11 +31,11 @@
 
         @* // TODO - Complete with other fields *@
 
-        <MudTextField @bind-Value="ViewObject.Metadata"
+        @* <MudTextField @bind-Value="ViewObject.Metadata"
                       For="@(() => ViewObject.Metadata)"
                       ReadOnly="false"
                       Immediate="true"
-                      Label="@Localizer["Metadata"]" />
+                      Label="@Localizer["Metadata"]" /> *@
 
       </MudCardContent>
 
